--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,11 +10,13 @@ set(
     curl_utils
     nemusic-gtk
     cjson
+    music_core
 )
 
 add_subdirectory(services)
 add_subdirectory(curl_utils)
 add_subdirectory(ne-gtk)
+add_subdirectory(music_core)
 
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(GTK4 REQUIRED gtk4)
