--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "third_party/cJSON"]
-	path = third_party/cJSON
-	url = https://github.com/DaveGamble/cJSON
+[submodule "third_party/json"]
+	path = third_party/json
+	url = https://github.com/nlohmann/json.git
